terraform/main/modules/security_groups/sg_nat.tf
# 보안그룹 생성
resource "aws_security_group" "myce_sg_nat" {
  name   = "${var.name_prefix}-sg-nat"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 65535
    protocol    = "tcp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # 모든 프로토콜을 의미
    cidr_blocks = ["0.0.0.0/0"]
  }
}
